# reedfrost

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  app.py  index.html  manifest.json  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt
.github/actions/pre-commit/: action.yaml
.github/workflows/: mkdocs-build.yaml  mkdocs-deploy.yaml  pytest.yaml
api/: index.html
chain_binomial/: index.html
docs/: api.md  chain_binomial.md  implementation.md  index.md
implementation/: index.html
rsconnect-python/: reedfrost.json
search/: search_index.json
src/reedfrost/: __init__.py  __main__.py  app.py
src/reedfrost/app/: __init__.py  input.py  model.py  view.py
tests/: test_app.py  test_chain_binomial.py  test_reed_frost.py
