[tool.poetry]
name = "reedfrost"
version = "0.1.0"
description = "Reed-Frost disease dynamics"
authors = ["Scott Olesen <ulp7@cdc.gov>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.2.3"
scipy = "^1.15.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.mkdocs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.5"
mkdocstrings = {extras = ["python"], version = "^0.28.2"}
mdx-truly-sane-lists = "^1.3"


[tool.poetry.group.app.dependencies]
streamlit = "^1.42.2"
altair = "^5.5.0"
polars = "^1.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
