[project]
name = "reedfrost"
version = "0.3.1"
description = "Reed-Frost disease dynamics"
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = ["numpy>=2.2.3,<3", "scipy>=1.15.2,<2"]

[project.optional-dependencies]
app = ["streamlit>=1.42.2,<2", "altair>=5.5.0,<6", "polars>=1.23.0,<2"]

[dependency-groups]
dev = ["pytest>=8.3.4,<9", "rsconnect-python>=1.25.2,<2"]
mkdocs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.5,<10",
    "mkdocstrings[python]>=0.28.2,<0.29",
    "mdx-truly-sane-lists~=1.3",
]

[tool.uv]
default-groups = ["dev", "mkdocs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
